# Computer-Graphics-Explained

./: CMakeLists.txt  CmakeLists.txt  README  gitignore
affine_texture_mapping/: CMakeLists.txt  clipplane.cpp  line.h  main.cpp  mesh.h  meshgen.cpp  meshgen.h  rasterizer.cpp  rasterizer.h  texture.cpp
clipping/: CMakeLists.txt  CmakeLists.txt  clipping.cpp  clipplane.cpp  clipplane.h  line.cpp  main.cpp  meshgen.cpp  meshgen.h
include/: fixedpoint.h  linealg.h  matrix4.h  vector2.h  vector3.h  vector4.h
perspective_texture_mapping/: CMakeLists.txt  clipplane.cpp  clipplane.h  framebuffer.cpp  framebuffer.h  main.cpp  mesh.h  meshgen.cpp  meshgen.h  myassert.h  rasterizer.cpp  rasterizer.h  texture.cpp  texture.h
projection/: CMakeLists.txt  CmakeLists.txt  line.cpp  line_exact.cpp  main.cpp  meshgen.cpp  meshgen.h  projection.cpp
rasterizer/: CMakeLists.txt  clipplane.h  main.cpp  meshgen.cpp  meshgen.h  myassert.h  rasterizer.cpp  rasterizer.h  rasterizer2.cpp
